# LegalQA

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-runpod.txt  requirements.txt
configs/environments/: runpod.env.example
configs/serving/: llm.qwen.json  retrieval.hybrid.json  serving.json
configs/training/: data_pipeline.legal.json  raft.sft.json  reranker.train.json  retriever.train.json
frontend/: app.js  index.html  style.css
scripts/: build_alignment.py  eval_retrieval.py  index_elasticsearch.py  prepare_training_data.py  reindex.py  runpod_bootstrap.py  runpod_healthcheck.py  runpod_train.py  train_all.py  train_reranker.py  train_retriever.py
src/: __init__.py
src/alignment/: __init__.py  hard_negative_mining.py  map_qa_to_corpus.py
src/api/: app.py  schemas.py
src/data/: __init__.py  load_corpus.py  load_qa.py
src/evaluation/: retrieval_eval.py
src/indexing/: artifacts.py  build_sparse_indexes.py
src/preprocessing/: chunker.py  clean_text.py  legal_metadata.py
src/qa/: __init__.py  citation_formatter.py  context_builder.py  generator.py  llm_reasoner.py  pipeline.py  prompt_builder.py
src/reranker/: __init__.py  cross_encoder_reranker.py  model_reranker.py
src/retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  elasticsearch_retriever.py  embedding_ensemble.py  hybrid_retriever.py  model_retriever.py
src/serving/: config.py
src/training/: __init__.py  (+2 more)
tests/: test_answer_quality_rules.py  test_chunker.py  test_exceptions.py  test_logger.py  test_prompt_builder.py  test_raft.py  test_schemas.py
(+4 files in other folders)
