[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-qa"
version = "0.1.0"
description = "Open-domain Vietnamese Legal QA MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "scikit-learn>=1.4.0",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
